feat: multi-shop support (shops/products/orders) + merchant UI